# nav

./: .gitignore  .navrc  .travis.yml  CMakeLists.txt  Makefile  README.md  config.mk  nav.1  navrc  navrc_example
src/: nrn.c
src/core/: clam.c  controller.c  controller.h  event.c  fnav.c  fnav.h  fnavd.c  fnavd.h  net.c  net.h  nrn.c  nrn.h  parser.c  parser.h
src/fnav/: CMakeLists.txt  ascii.h  buffer.c  buffer.h  cmd.c  cmd.h  cmdline.c  cmdline.h  cmdstr.c  cmdstr.h  cntlr.h  compl.c  compl.h  config.c  config.h  controller.c  event.c  event.h  fm_cntlr.c  fm_cntlr.h  fnav.c  fnav.h  fs.c  fs.h  fsw_cntlr.c  fsw_cntlr.h  info.c  info.h  input.c  input.h  log.c  log.h  loop.c  loop.h  macros.h  model.c  model.h  op_cntlr.c  option.c  option.h  (+19 more)
src/fnav/event/: event.c  event.h  fs.c  fs.h  hook.c  hook.h  input.c  input.h  loop.c  loop.h  proc.c  proc.h  process.c  process.h  pty_process.c  pty_process.h  rstream.c  rstream.h  shell.c  shell.h  stream.c  stream.h  uv_process.c  uv_process.h  wstream.c  wstream.h
src/fnav/lib/: bsearch.h  kbtree.h  klist.h  utarray.h
src/fnav/plugins/: plugin.c  plugin.h
src/fnav/plugins/dt/: dt.c  dt.h
src/fnav/plugins/fm/: fm.c  fm.h
src/fnav/plugins/img/: img.c  img.h
src/fnav/plugins/op/: op.c  op.h
src/fnav/plugins/term/: term.c  term.h
src/fnav/tui/: buffer.c  buffer.h  cntlr.c  cntlr.h  ex_cmd.c  ex_cmd.h  fm_cntlr.c  fm_cntlr.h  history.c  history.h  img_cntlr.c  img_cntlr.h  layout.c  layout.h  menu.c  menu.h  op_cntlr.c  op_cntlr.h  overlay.c  overlay.h  pane.c  pane.h  sbuffer.c  sbuffer.h  sh_cntlr.c  sh_cntlr.h  window.c  window.h
src/fnav/vt/: vt.c  vt.h
src/gui/: clam-daemon.c  fnav-daemon.c  fnav.c  nrn-daemon.c  rpc.c
src/nav/: ascii.h  cmd.c  cmd.h  cmdline.c  cmdline.h  compl.c  compl.h  config.c  config.h  expand.c  expand.h  filter.c  filter.h  info.c  info.h  log.c  log.h  macros.h  model.c  model.h  nav.c  nav.h  option.c  option.h  rbuffer.c  rbuffer.h  regex.c  regex.h  table.c  table.h  util.c  util.h
src/nav/event/: event.c  event.h  file.c  file.h  fs.c  fs.h  ftw.c  ftw.h  hook.c  hook.h  input.c  input.h  process.c  process.h  pty_process.c  pty_process.h  rstream.c  rstream.h  shell.c  shell.h  stream.c  stream.h  uv_process.c  uv_process.h  wstream.c  wstream.h
src/nav/lib/: bsearch.h  map.c  map.h  utarray.h  uthash.h
src/nav/plugins/: plugin.c  plugin.h
src/nav/plugins/dt/: dt.c  dt.h
src/nav/plugins/ed/: ed.c  ed.h
src/nav/plugins/fm/: fm.c  fm.h
src/nav/plugins/img/: img.c  img.h
src/nav/plugins/op/: op.c  op.h
src/nav/plugins/term/: term.c  term.h
src/nav/tui/: buffer.c  buffer.h  ex_cmd.c  ex_cmd.h  history.c  history.h  layout.c  layout.h  menu.c  menu.h  message.c  message.h  overlay.c  overlay.h  screen.c  screen.h  select.c  select.h  window.c  window.h
src/plugins/: shell.c
